[gd_scene load_steps=8 format=3 uid="uid://bxhrc6hqim78"]

[ext_resource type="Texture2D" uid="uid://b8foaqc3dedl8" path="res://Assets/Sprites/pixel_planet.png" id="1_04xj0"]
[ext_resource type="Script" path="res://Scenes/Panels/DetailPanel/detail_panel.gd" id="1_iqjk0"]
[ext_resource type="FontFile" uid="uid://c071thysmf4wl" path="res://Assets/Fonts/terminal-grotesque.ttf" id="2_ltd5g"]
[ext_resource type="Texture2D" uid="uid://bdhl54t3id5mv" path="res://Assets/Sprites/Star.png" id="3_vgvud"]

[sub_resource type="LabelSettings" id="LabelSettings_4nwe5"]
font = ExtResource("2_ltd5g")
font_size = 60

[sub_resource type="LabelSettings" id="LabelSettings_7arbi"]
font = ExtResource("2_ltd5g")
font_size = 38

[sub_resource type="LabelSettings" id="LabelSettings_rbo20"]
font = ExtResource("2_ltd5g")
font_size = 60

[node name="DetailPanel" type="Control"]
layout_mode = 3
anchor_right = 0.556
anchor_bottom = 1.481
offset_right = -0.512085
offset_bottom = 0.311951
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_iqjk0")

[node name="PlanetSprite" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 208.0
offset_top = 152.0
offset_right = 349.0
offset_bottom = 292.0
scale = Vector2(1.47263, 1.47263)
texture = ExtResource("1_04xj0")
expand_mode = 1

[node name="PlanetNameLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 104.0
offset_top = 42.0
offset_right = 515.0
offset_bottom = 133.0
text = "Planet Name"
label_settings = SubResource("LabelSettings_4nwe5")
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlanetDescriptionLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 54.0
offset_top = 400.0
offset_right = 605.0
offset_bottom = 565.0
text = "This is a planet description. This is 
what a second sentence looks like. If
we want, we can even have a third 
sentence."
label_settings = SubResource("LabelSettings_7arbi")

[node name="PrimaryTrendSprite" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 104.0
offset_top = 629.0
offset_right = 144.0
offset_bottom = 669.0
scale = Vector2(4.06597, 4.06597)
texture = ExtResource("3_vgvud")

[node name="SecondaryTrendSprite" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 383.0
offset_top = 629.0
offset_right = 423.0
offset_bottom = 669.0
scale = Vector2(4.06597, 4.06597)
texture = ExtResource("3_vgvud")

[node name="PrimaryTrendLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 96.0
offset_top = 842.0
offset_right = 267.0
offset_bottom = 903.0
text = "Trend 1"
label_settings = SubResource("LabelSettings_rbo20")
horizontal_alignment = 1

[node name="SecondaryTrendLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 371.0
offset_top = 842.0
offset_right = 557.0
offset_bottom = 903.0
text = "Trend 2"
label_settings = SubResource("LabelSettings_rbo20")
horizontal_alignment = 1

[node name="PrimaryTrendButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 76.0
offset_top = 604.0
offset_right = 116.0
offset_bottom = 644.0
scale = Vector2(5.40075, 8.24922)

[node name="SecondaryTrendButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 359.0
offset_top = 604.0
offset_right = 399.0
offset_bottom = 644.0
scale = Vector2(5.40075, 8.24922)
